Move MARC-specific processSlices back to AbstractMarc strategy and make abstract, move multithread-supporting method to AbstractLinkedData strategy, leave notes on how to arrange back for generic multithreading. Back out use of virtual threads as it's incompatible with synchronized code blocks and leave notes on how and when to return to virtual threads.